# GPT-in-your-hand

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/gpt/in/my/hand/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: tarot_cards.json
app/src/main/assets/prompts/: tarot_system.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/gpt/in/your/hand/: MainActivity.kt
app/src/main/java/gpt/in/your/hand/chat/: ChatMessage.kt  ChatTemplate.kt  ConversationManager.kt  HistoryWindow.kt  SystemPrompt.kt
app/src/main/java/gpt/in/your/hand/inference/: InferenceEngine.kt  SamplingConfig.kt
app/src/main/java/gpt/in/your/hand/nativ/: LlamaJNI.kt
app/src/main/java/gpt/in/your/hand/perf/: InferenceProfiler.kt  ThreadConfig.kt
app/src/main/java/gpt/in/your/hand/tarot/: SafetyFilter.kt  TarotCards.kt  TarotPromptBuilder.kt
app/src/main/java/gpt/in/your/hand/ui/: ChatScreen.kt  OutputView.kt  (+6 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/gpt/in/my/hand/: ExampleUnitTest.kt
docs/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ml/: README.md
ml/01-models/: README.md  download.py
ml/02-finetune/: README.md  init_adapter.py  merge_adapter.py  requirements.txt
ml/02-finetune/data/: README.md  sample.jsonl
ml/03-quantize/: README.md  convert_to_gguf.sh
native/: README.md  llama.cpp.version
native/jni/: CMakeLists.txt  llama_jni.cpp
native/scripts/: build_llama.sh
